[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcode"
version = "1.0.0"
authors = [{name="Benjamin Porter",email="bcgcustomerservices@gmail.com"},]
description = "A simple module for writing in GCODE."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: AGPL-3.0-or-later",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hacking3dprinters/gcode"
Issues = "https://github.com/hacking3dprinters/gcode/issues"
